--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "args": "^2.1.0",
+    "glob": "^7.1.2",
     "handlebars": "^4.0.5",
     "jest": "^23.2.0",
     "js-yaml": "^3.6.1",
